--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -4,6 +4,8 @@
     --primary-background-color: rgb(27, 27, 27);
     --secondary-background-color: rgb(19, 19, 20);
     --blur-primary-background-color: rgb(41, 41, 41);
+    --scrollbar-color: var(--primary-background-color);
+    --scrollbar-thumb-color: rgb(85, 85, 85);
 }
 
 * {
@@ -50,10 +52,17 @@ header {
 
 .main-wrapper {
     display: flex;
+    width: 100%;
 }
 
 .sidebar-container {
-    padding-inline: 1rem;
+    padding-inline: 1em;
+    width: 20rem;
+    flex-shrink: 0;
+}
+
+.disable-display {
+    display: none;
 }
 
 .sidebar__button {
@@ -108,9 +117,13 @@ header {
     padding-left: 0.5rem;
 }
 
+#dropdown-arrow-icon {
+    box-sizing: content-box;
+    padding: 0.2rem;
+}
+
 #dropdown-arrow-icon:hover {
     border-radius: 50%;
-    padding: 0.2rem;
     background-color: var(--blur-primary-background-color);
 }
 
@@ -125,36 +138,29 @@ header {
 
 .main-board {
     display: flex;
-    flex-grow: 1;
     gap: 2rem;
     overflow-y: hidden;
     min-height: 93vh;
-    /* scrollbar-color: #888 #f1f1f1;
-    scrollbar-width: thin; */
+    padding-bottom: 0.5rem;
 }
 
 .main-board::-webkit-scrollbar {
-    width: 8px;
+    height: 0.5rem;
 }
 
 .main-board::-webkit-scrollbar-track {
-    background-color: rgb(68, 71, 70);
-    border-radius: 10px;
+    background-color: var(--primary-background-color);
+    border-radius: 8px;
 }
 
 .main-board::-webkit-scrollbar-thumb {
-    background-color: var(--button-background);
-    border-radius: 10px;
-    /* border: 2px solid #f1f1f1; */
-}
-
-.main-board::-webkit-scrollbar-thumb:hover {
-    background-color: #555;
+    background-color: var(--scrollbar-thumb-color);
+    border-radius: 8px;
 }
 
 .card {
     background-color: var(--secondary-background-color);
-    min-width: 25%;
+    min-width: 25rem;
     display: flex;
     flex-grow: 1;
     flex-direction: column;
@@ -198,4 +204,11 @@ header {
 .card__footer {
     display: flex;
     align-items: center;
+}
+
+.hide-content {
+    display: none;
+}
+.expanded {
+    display: block;
 }
