--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -24,7 +24,7 @@ header {
     display: flex;
     align-items: center;
     justify-content: space-between;
-    min-height: 7vh;
+    height: 7vh;
 }
 
 .header__group {
@@ -33,8 +33,19 @@ header {
 }
 
 .header__img {
+    box-sizing: content-box;
     cursor: pointer;
     margin: 0 1rem 0 1rem;
+    padding: 1rem;
+}
+
+.header__img:hover {
+    border-radius: 50%;
+    background-color: var(--blur-primary-background-color);
+}
+
+.header__img--large {
+    width: 2.3rem;
 }
 
 .header__link {
@@ -46,23 +57,33 @@ header {
     gap: 0.5rem;
 }
 
-.header__img--large {
-    width: 2.3rem;
-}
-
 .main-wrapper {
     display: flex;
     width: 100%;
+    gap: 2rem;
 }
 
 .sidebar-container {
     padding-inline: 1em;
     width: 20rem;
     flex-shrink: 0;
+    transition: transform 0.3s ease-in-out;
+    /* transition: display 0.3s ease-in-out; */
 }
 
-.disable-display {
-    display: none;
+@keyframes collapse {
+    0% {
+        width: 20rem;
+    }
+    100% {
+        width: 0rem;
+        display: none;
+        visibility: none;
+    }
+}
+
+.deactive {
+    animation: collapse 0.5s ease-in-out infinite normal;
 }
 
 .sidebar__button {
@@ -72,7 +93,7 @@ header {
     box-sizing: content-box;
     background-color: var(--button-background);
     border-radius: 1rem;
-    width: 50%;
+    width: 35%;
     min-height: 2.6rem;
     display: flex;
     align-items: center;
@@ -84,7 +105,7 @@ header {
 
 .sidebar__button:hover {
     cursor: pointer;
-    background-color: var(--hover-button-background);
+    box-shadow: 0 4px 8px var(--hover-button-background);
 }
 
 .sidebar__add-icon {
@@ -140,8 +161,9 @@ header {
     display: flex;
     gap: 2rem;
     overflow-y: hidden;
-    min-height: 93vh;
+    height: 93vh;
     padding-bottom: 0.5rem;
+    transition: transform 0.3s ease-in-out;
 }
 
 .main-board::-webkit-scrollbar {
