--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -18,6 +18,7 @@ html {
     font-family: Arial, sans-serif;
     background-color: var(--primary-background-color);
     color: var(--primary-text-color);
+    user-select: none;
 }
 
 header {
@@ -60,30 +61,18 @@ header {
 .main-wrapper {
     display: flex;
     width: 100%;
-    gap: 2rem;
 }
 
 .sidebar-container {
-    padding-inline: 1em;
+    margin-left: 1em;
     width: 20rem;
     flex-shrink: 0;
-    transition: transform 0.3s ease-in-out;
-    /* transition: display 0.3s ease-in-out; */
+    transition: width 0.3s ease-in-out;
+    overflow: hidden;
 }
 
-@keyframes collapse {
-    0% {
-        width: 20rem;
-    }
-    100% {
-        width: 0rem;
-        display: none;
-        visibility: none;
-    }
-}
-
-.deactive {
-    animation: collapse 0.5s ease-in-out infinite normal;
+.sidebar-container.expanded {
+    width: 0;
 }
 
 .sidebar__button {
@@ -93,7 +82,7 @@ header {
     box-sizing: content-box;
     background-color: var(--button-background);
     border-radius: 1rem;
-    width: 35%;
+    width: 5rem;
     min-height: 2.6rem;
     display: flex;
     align-items: center;
@@ -105,11 +94,16 @@ header {
 
 .sidebar__button:hover {
     cursor: pointer;
-    box-shadow: 0 4px 8px var(--hover-button-background);
+    background-color: var(--hover-button-background);
 }
 
 .sidebar__add-icon {
     width: 2rem;
+}
+
+.selection {
+    display: flex;
+    flex-direction: column;
 }
 
 .selection__item,
@@ -118,6 +112,7 @@ header {
     align-items: center;
     column-gap: 0.5rem;
     padding: 0.5rem;
+    width: 20rem;
 }
 
 .selection__item:hover,
@@ -155,38 +150,77 @@ header {
     padding: 0.5rem;
     column-gap: 0.5rem;
     margin-left: -0.25rem;
+    width: 20rem;
 }
 
 .main-board {
     display: flex;
+    flex-grow: 1;
     gap: 2rem;
-    overflow-y: hidden;
+    overflow-x: scroll;
     height: 93vh;
+    max-width: 100%;
     padding-bottom: 0.5rem;
     transition: transform 0.3s ease-in-out;
+    align-items: start;
 }
 
-.main-board::-webkit-scrollbar {
+.custom-main-board-scrollbar::-webkit-scrollbar {
     height: 0.5rem;
 }
 
-.main-board::-webkit-scrollbar-track {
-    background-color: var(--primary-background-color);
+.custom-card-scrollbar::-webkit-scrollbar {
+    width: 0.5rem;
+    height: 90rem;
+}
+
+.custom-scrollbar::-webkit-scrollbar-track {
     border-radius: 8px;
 }
 
-.main-board::-webkit-scrollbar-thumb {
+.custom-main-board-scrollbar::-webkit-scrollbar-track {
+    background-color: var(--primary-background-color);
+}
+
+.custom-card-scrollbar::-webkit-scrollbar-track {
+    background-color: var(--secondary-background-color);
+}
+
+.custom-scrollbar::-webkit-scrollbar-thumb {
     background-color: var(--scrollbar-thumb-color);
     border-radius: 8px;
 }
 
+/* .card-wrapper {
+    border-radius: 50px;
+    overflow: hidden;
+} */
+
+/* .card-wrapper {
+    min-width: 25rem;
+    max-width: 100%;
+    border-radius: 50px;
+} */
+
 .card {
     background-color: var(--secondary-background-color);
+    width: 55rem;
     min-width: 25rem;
-    display: flex;
-    flex-grow: 1;
-    flex-direction: column;
+    max-width: 100%;
+    max-height: 100%;
+    overflow-y: scroll;
     padding: 0 1.2em 10px 1.2em;
+    position: relative;
+    border-inline: 0.5rem solid var(--secondary-background-color);
+    border-radius: 50px;
+}
+
+.card::before {
+    left: -10px;
+}
+
+.card__bar-container {
+    text-align: center;
 }
 
 .card__horizontal-bar {
@@ -211,16 +245,16 @@ header {
 .card__add-item {
     display: flex;
     align-items: center;
-    gap: 15px;
+    gap: 1rem;
     color: var(--color-secondary);
 }
 
 .card__body {
-    height: 300px;
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
+    min-height: 25rem;
 }
 
 .card__footer {
@@ -230,7 +264,4 @@ header {
 
 .hide-content {
     display: none;
-}
-.expanded {
-    display: block;
 }
