--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -6,6 +6,8 @@
     --blur-primary-background-color: rgb(41, 41, 41);
     --scrollbar-color: var(--primary-background-color);
     --scrollbar-thumb-color: rgb(85, 85, 85);
+    --light-primary-background-color: rgb(55, 57, 59);
+    --lighter-primary-background-color: rgb(64, 69, 74);
 }
 
 * {
@@ -76,11 +78,8 @@ header {
 }
 
 .sidebar__button {
-    --button-background: rgb(55, 57, 59);
-    --hover-button-background: rgb(64, 69, 74);
-
     box-sizing: content-box;
-    background-color: var(--button-background);
+    background-color: var(--light-primary-background-color);
     border-radius: 1rem;
     width: 5rem;
     min-height: 2.6rem;
@@ -94,7 +93,7 @@ header {
 
 .sidebar__button:hover {
     cursor: pointer;
-    background-color: var(--hover-button-background);
+    background-color: var(--lighter-primary-background-color);
 }
 
 .sidebar__add-icon {
@@ -159,7 +158,6 @@ header {
     gap: 2rem;
     overflow-x: scroll;
     height: 93vh;
-    max-width: 100%;
     padding-bottom: 0.5rem;
     transition: transform 0.3s ease-in-out;
     align-items: start;
@@ -191,32 +189,18 @@ header {
     border-radius: 8px;
 }
 
-/* .card-wrapper {
-    border-radius: 50px;
-    overflow: hidden;
-} */
-
-/* .card-wrapper {
-    min-width: 25rem;
-    max-width: 100%;
-    border-radius: 50px;
+/* .custom-card-scrollbar::-webkit-scrollbar-thumb {
+    visibility: hidden;
 } */
 
 .card {
+    max-height: 90vh;
     background-color: var(--secondary-background-color);
-    width: 55rem;
+    border-radius: 2rem;
     min-width: 25rem;
-    max-width: 100%;
-    max-height: 100%;
-    overflow-y: scroll;
-    padding: 0 1.2em 10px 1.2em;
-    position: relative;
-    border-inline: 0.5rem solid var(--secondary-background-color);
-    border-radius: 50px;
-}
-
-.card::before {
-    left: -10px;
+    flex-grow: 1;
+    padding: 0 0.2rem 0.5rem 0.2rem;
+    overflow: hidden;
 }
 
 .card__bar-container {
@@ -232,8 +216,15 @@ header {
 
 .card__header {
     display: flex;
+    flex-direction: column;
+    padding-inline: 0.5rem;
+}
+
+.card__name {
+    display: flex;
     align-items: center;
     justify-content: space-between;
+    padding-inline: 0.5rem;
 }
 
 .selection__img,
@@ -242,19 +233,31 @@ header {
     width: 1.5rem;
 }
 
+.card__name .card__img {
+    cursor: pointer;
+}
+
 .card__add-item {
     display: flex;
     align-items: center;
     gap: 1rem;
     color: var(--color-secondary);
+    padding-inline: 0.5rem;
+}
+
+.card__add-item:hover {
+    background-color: var(--blur-primary-background-color);
+    border-radius: 1rem;
+    cursor: pointer;
 }
 
 .card__body {
     display: flex;
     flex-direction: column;
-    justify-content: center;
     align-items: center;
-    min-height: 25rem;
+    overflow-y: auto;
+    max-height: 80vh;
+    padding-left: 0.5rem;
 }
 
 .card__footer {
@@ -262,6 +265,94 @@ header {
     align-items: center;
 }
 
-.hide-content {
-    display: none;
+dialog {
+    border: none;
+    width: 30%;
+    background-color: var(--light-primary-background-color);
+    margin-inline: auto;
+}
+
+form {
+    background-color: var(--light-primary-background-color);
+    width: 100%;
+    border: none;
+    display: flex;
+    flex-direction: column;
+    padding: 2rem;
+    color: var(--primary-text-color);
+}
+
+form > * {
+    width: 100%;
+}
+
+.form__title {
+    font-size: 1.5rem;
+}
+
+.form__date,
+.form__time {
+    font-size: 1.2rem;
+}
+
+.form__all-day {
+    position: absolute;
+    opacity: 0;
+    width: 0;
+    height: 0;
+    pointer-events: none;
+}
+
+.form__all-day + label {
+    position: relative;
+    padding-left: 1.5rem;
+    cursor: pointer;
+}
+
+.form__all-day + label::before {
+    content: "";
+    position: absolute;
+    top: 50%;
+    left: 0;
+    transform: translateY(-50%);
+    width: 1rem;
+    height: 1rem;
+    background-color: white;
+}
+
+.form__all-day:checked + label::before {
+    content: "";
+    position: absolute;
+    top: 50%;
+    left: 0;
+    transform: translateY(-50%);
+    width: 1rem;
+    height: 1rem;
+    background-color: blue;
+}
+
+.form__all-day + label::after {
+    content: "";
+    position: absolute;
+    top: 10%;
+    left: 0.4rem;
+    border: solid white;
+    border-width: 0 0.2rem 0.2rem 0;
+    width: 0.25rem;
+    height: 0.5rem;
+    transform-origin: left;
+    transform: rotateY(90deg);
+}
+
+.form__all-day:checked + label::after {
+    content: "";
+    position: absolute;
+    top: 10%;
+    left: 0.4rem;
+    border: solid white;
+    border-width: 0 0.2rem 0.2rem 0;
+    width: 0.25rem;
+    height: 0.5rem;
+    transform: rotate(45deg);
+    transition: all 10s ease;
 }
